# ksmartmonitor

./: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  metadata.json
cli-invoker/: CMakeLists.txt  main.cpp
contents/code/: smart.js
contents/config/: config.qml  main.xml
contents/ui/: CompactRepresentation.qml  DriveItem.qml  FullRepresentation.qml  configDrives.qml  configGeneral.qml  main.qml
kauth/: CMakeLists.txt  com.github.vertimyst.ksmartmonitor.actions  smartmonitorhelper.cpp  smartmonitorhelper.h
